<resources>
    <string name="app_name">What\'s Goating On?</string>

    <string name="hello_world">Hello world!</string>
    <string name="test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="event_name_label">Event Name</string>
    <string name="location_label">Location</string>
    <string name="start_time_label">Start</string>
    <string name="end_time_label">End</string>
    <string name="description_label">Description</string>
    <string name="tags_label">Tags</string>
    <string name="create_button">Create</string>
    <string name="photo_button">Take Photo</string>
    <string name="title_activity_event_detail">EventDetail</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="createEventTitle">Create an Event!</string>
    <string name="date_default">mm/dd/yyyy</string>
</resources>
